# libnumerixpp

./: .clang-format  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  Doxygen.cmake  HACKING.md  README.md  SECURITY.md  build.sh  format-code.py  spacetabs.sh
.github/workflows/: static.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
docs/: README.md  doxygen-styles.css
docs/en/: index.md
docs/man/man3/: common.cpp.3  computerscience.3  core.cpp.3  core.hpp.3  equations.cpp.3  equations.hpp.3  kinematics.cpp.3  kinematics.hpp.3  libnumerixpp.cpp.3  mathematics.3  mathematics_quadratic.3  mathematics_statistics.3  physics.3  physics_kinematics.3  quadratic_equations.cpp.3  quadratic_equations.hpp.3  statistics.cpp.3  statistics.hpp.3  todo.3
docs/ru/: article.md  article2.md  article3.md  index.md
docs/versions/: v0.1.2.md  v0.1.3.md
examples/: example-1.cpp  example-2.cpp  example-3.cpp  example-4.cpp
include/libnumerixpp/: export.h  libnumerixpp.hpp
include/libnumerixpp/computerscience/: core.hpp
include/libnumerixpp/core/: common.hpp
include/libnumerixpp/mathematics/: core.hpp  equations.hpp  quadratic_equations.hpp  statistics.hpp
include/libnumerixpp/physics/: core.hpp  kinematics.hpp
src/: libnumerixpp.cpp
src/computerscience/: core.cpp
src/core/: common.cpp
src/mathematics/: core.cpp  equations.cpp  quadratic_equations.cpp  statistics.cpp
src/physics/: core.cpp  kinematics.cpp
test/: CMakeLists.txt
test/source/: libnumerixpp_test.cpp
